cleanup inspections